tests/fixtures/invalid/break-4.py
for a in [1, 2]:  # Check 3
    a = 1
    # Comment before statement
    break

for a in [1, 2]:  # Check 4
    a = """
    Multiline string assignment
    """
    break

for a in [1, 2]:  # Check 5
    a = 1
    break

for a in [1, 2]:  # Check 6
    break
    break
